Bug 402501 - Check/transaction number not imported via CSV plugin
Summary: Check/transaction number not imported via CSV plugin
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 5.0.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-23 14:59 UTC by Thomas Baumgart
Modified: 2019-01-26 19:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2018-12-23 14:59:31 UTC
SUMMARY
When a column is selected to import the numbers of transactions they are not found after import

STEPS TO REPRODUCE
1. Import CSV file
2. Select column for number field
3. Import the file

OBSERVED RESULT
Number field is empty

EXPECTED RESULT
Number found in selected column appears in number field of the imported transaction

ADDITIONAL INFORMATION
See also report on forum https://forum.kde.org/viewtopic.php?f=69&t=152769
Comment 1 Thomas Baumgart 2018-12-23 15:01:30 UTC
Git commit ca014fc7640d4b3e20bc12f93bd061d80c6b8f27 by Thomas Baumgart.
Committed on 23/12/2018 at 15:02.
Pushed by tbaumgart into branch '5.0'.

Import number field during CSV import
FIXED-IN: 5.0.3

M  +5    -4    kmymoney/plugins/csv/import/core/csvimportercore.cpp

https://commits.kde.org/kmymoney/ca014fc7640d4b3e20bc12f93bd061d80c6b8f27