Import number field during CSV import

BUG: 402501
FIXED-IN: 5.0.3